<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ShareWithU</string>
    <string name="action_settings">Settings</string>
	
    <string name="text_login_name">用户名</string>
    <string name="text_login_password">密码</string>
    <string name="btn_login">登陆</string>
    <string name="btn_signup">注册</string>
    <string name="str_logout">退出登录</string>
    
    <string name="input_name">请输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="input_email">请输入邮箱</string>
    
    
    <string name="drawer_open">菜单</string>
    <string name="drawer_close">地图</string>
    
     <string name="gps_switch_text">开启Gps服务</string>
     
     <string name="btn_refresh">刷新</string>
     
     <string name="setting">设置</string>
     <string name="post_photo">上传</string>
     <string name="community">社区</string>
     <string name="todo">TODO</string>
     <string name="ok">确定</string>
     <string name="cancel">取消</string>
     
     <string name="search_btn">搜索</string>
     <string name="friend">好友</string>
     <string name="takephoto">拍照</string>
     <string name="recordmedia">录像</string>
     
     <string name="upload">上传</string>
     <string name="btn_upload"></string>
     <string name="loadmore">加载更多</string>
     <string name="praise">赞</string>
     <string name="comment">评论</string>
     <string name="send">发送</string>
     <string name="main_btn_map">地图</string>
     <string name="mian_tab_set">设置</string>
     <string name="find">发现</string>
    
</resources>
