<?xml version="1.0" encoding="utf-8"?>

    
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:hint="@string/input_name"
            android:paddingLeft="20dip"
            android:paddingRight="10dip"
            android:singleLine="true"
            android:textColor="#ff444444"
            android:textColorHint="#ffcccccc"
            android:textSize="16sp"
             >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_account"
            android:layout_marginTop="10dp"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:paddingLeft="20dip"
            android:paddingRight="10dip"
            android:singleLine="true"
            android:textColor="#ff444444"
            android:textColorHint="#ffcccccc"
            android:textSize="16sp" />
        
        <!--EditText
            android:id="@+id/et_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_pwd"
            android:layout_marginTop="10dp"
            android:hint="@string/input_email"
            android:paddingLeft="20dip"
            android:paddingRight="10dip"
            android:singleLine="true"
            android:textColor="#ff444444"
            android:textColorHint="#ffcccccc"
            android:textSize="16sp"
            android:visibility="visible"  /-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_pwd"
            android:layout_marginTop="20dp"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:orientation="horizontal"
            android:gravity="center">"
            
            
            <Button
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/btn_signup"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:gravity="center"
                android:background="@drawable/btn_logout_selector" />"

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_login"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:gravity="center"
                android:background="@drawable/btn_logout_selector" />

            
        </LinearLayout>
    </RelativeLayout>


