<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/main_bottom"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_main_act_map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/top_bar"
                android:drawableTop="@drawable/tab_map_btn"
                android:onClick="onTabSelect"
                android:paddingBottom="2dip"
                android:paddingTop="7dip"
                android:scaleType="matrix"
                android:text="@string/main_btn_map"
                android:textColor="@drawable/tab_textcolor"
                android:textSize="12sp" />

            
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_main_act_contract"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/top_bar"
                android:drawableTop="@drawable/tab_contact_btn"
                android:onClick="onTabSelect"
                android:paddingBottom="2dip"
                android:paddingTop="7dip"
                android:scaleType="matrix"
                android:text="@string/friend"
                android:textColor="@drawable/tab_textcolor"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/iv_contact_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="30dp"
                android:layout_marginTop="7dp"
                android:contentDescription="@string/action_settings"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:visibility="visible" />
        </RelativeLayout>
        
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_main_act_find"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/top_bar"
                android:drawableTop="@drawable/tab_picture_btn"
                android:onClick="onTabSelect"
                android:paddingBottom="2dip"
                android:paddingTop="7dip"
                android:scaleType="matrix"
                android:text="@string/find"
                android:textColor="@drawable/tab_textcolor"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/iv_main_act_find_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="30dp"
                android:layout_marginTop="7dp"
                android:contentDescription="@string/action_settings"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:visibility="visible" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_main_act_set"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/top_bar"
            android:drawableTop="@drawable/tab_set_btn"
            android:onClick="onTabSelect"
            android:paddingBottom="2dip"
            android:paddingTop="7dip"
            android:scaleType="matrix"
            android:text="@string/mian_tab_set"
            android:textColor="@drawable/tab_textcolor"
            android:textSize="12sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/container_main_act_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/main_bottom" />

</RelativeLayout>